--- a/css/index.css
+++ b/css/index.css
@@ -102,6 +102,7 @@ h4 {
     background-color: white;
 
     margin: 5%;
+    margin-top: 8%;
 
     border: 3px solid white;
     border-radius: 25px;
