--- a/css/rq-style.css
+++ b/css/rq-style.css
@@ -102,6 +102,10 @@ h4 {
     justify-content: center;
 }
 
+#categories {
+    max-width: 1450px;
+}
+
 .navbar-brand {
     color: #4d8bdc;
     text-shadow: #f9c66e 1px 0 10px;
@@ -122,7 +126,7 @@ h4 {
 .rq-text {
     background-color: white;
 
-    text-align: left;
+    text-align: justify;
 
     margin: 3.5% 5% 2% 5%;
 }
@@ -140,6 +144,13 @@ h4 {
 .center-plot {
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 1227px) {
+    .center-plot {
+        display: flex;
+        justify-content: flex-start;
+    }
 }
 
 .horizontal-line {
@@ -177,4 +188,28 @@ h4 {
     max-height: 500px;
     overflow-x: auto;
     overflow-y: auto;
+}
+
+.max-width {
+    max-width: 825px;
+}
+
+.pipeline {
+    max-width: 1400px;
+    margin-bottom: 50px;
+}
+
+.category-row {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.accordion-header {
+    border: 1px solid darkgray;
+    border-radius: 2px;
+}
+
+.col {
+    border: 1px solid darkgray;
+    border-radius: 10px;
 }
